--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@gridsome/source-filesystem": "^0.6.2",
     "@gridsome/source-strapi": "^0.2.0",
     "@gridsome/transformer-remark": "^0.6.4",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
-    "gridsome": "^0.7.0"
+    "dayjs": "^1.10.4",
+    "gridsome": "^0.7.0",
+    "markdown-it": "^12.0.4"
   }
 }
